--- a/server/package.json
+++ b/server/package.json
@@ -13,12 +13,11 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@prisma/client": "^5.15.0",
     "@types/node": "^20.14.2",
+    "nodemon": "^3.1.3",
+    "prisma": "^5.15.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.5"
-  },
-  "dependencies": {
-    "nodemon": "^3.1.3",
-    "prisma": "^5.15.0"
   }
 }
