--- a/server/package.json
+++ b/server/package.json
@@ -15,10 +15,14 @@
   "license": "ISC",
   "devDependencies": {
     "@prisma/client": "^5.15.0",
+    "@types/express": "^4.17.21",
     "@types/node": "^20.14.2",
     "nodemon": "^3.1.3",
     "prisma": "^5.15.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.5"
+  },
+  "dependencies": {
+    "express": "^4.19.2"
   }
 }
